Hide the Maintenance red block

--- a/html/index.html
+++ b/html/index.html
@@ -102,11 +102,11 @@
     <script src="js/routes.js?4"></script>
 </head>
 
-<div class="fixed-footer">
+<!-- <div class="fixed-footer">
     <ul>
         <li style=color:#89F0EF;><strong>The web wallet is in maintenance following the fork of the network. We will resume normal operation very soon.</strong></a><span class="close" style=color:#89F0EF;font-weight:100;>&times;</span></li>
     </ul>
-</div>
+</div> -->
 
 <body ng-controller="AccountCtrl">
 
