Updated frontent part 1

--- a/html/index.html
+++ b/html/index.html
@@ -102,11 +102,11 @@
     <script src="js/routes.js?4"></script>
 </head>
 
-<!-- <div class="fixed-footer">
+<div class="fixed-footer">
     <ul>
         <li style=color:#89F0EF;><strong>The web wallet is in maintenance following the fork of the network. We will resume normal operation very soon.</strong></a><span class="close" style=color:#89F0EF;font-weight:100;>&times;</span></li>
     </ul>
-</div> -->
+</div>
 
 <body ng-controller="AccountCtrl">
 
@@ -138,7 +138,7 @@
                 <div class="w-icon-nav-menu"></div>
             </div>
             <a class="w-nav-brand brand-box" ng-href="{{loggedIn() ? '#!/overview' : '#!/'}}">
-            <img src="https://x-cash.org/front/images/logo-webwallet2.png" width="200" alt="xcash-webwallet">
+            <img src="https://x-network.io/front/images/logo/xcash-logo-dark2x.png" width="200" alt="xcash-webwallet">
         </a>
         </div>
     </div>
@@ -151,7 +151,7 @@
             <div class="w-container">
                 <div class="w-row">
                     <div class="w-clearfix footer-link">
-                        Copyright © 2018, X-CASH. All trademarks and copyrights belong to their respective owners.<br> The wallet is based on <a class="footer-link" style="margin-left: 0; float: none;" href="https://mymonero.com"> MyMonero</a> and <a href="https://github.com/moneroexamples/openmonero" target="_blank">OpenMonero</a> projects
+                        Copyright © 2019, X-CASH. All trademarks and copyrights belong to their respective owners.<br> The wallet is based on <a class="footer-link" style="margin-left: 0; float: none;" href="https://mymonero.com"> MyMonero</a> and <a href="https://github.com/moneroexamples/openmonero" target="_blank">OpenMonero</a> projects
                     </div>
                 </div>
             </div>
